0.5.3/_sources/gallery/set_colormaps.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/set_colormaps.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_set_colormaps.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_set_colormaps.py:


Set colormaps
=============

Add named or unnamed vispy colormaps to existing layers.

.. tags:: visualization-basic

.. GENERATED FROM PYTHON SOURCE LINES 9-36



.. image-sg:: /gallery/images/sphx_glr_set_colormaps_001.png
   :alt: set colormaps
   :srcset: /gallery/images/sphx_glr_set_colormaps_001.png
   :class: sphx-glr-single-img





.. code-block:: Python


    import numpy as np
    import vispy.color
    from skimage import data

    import napari

    histo = data.astronaut() / 255
    rch, gch, bch = np.transpose(histo, (2, 0, 1))
    red = vispy.color.Colormap([[0.0, 0.0, 0.0], [1.0, 0.0, 0.0]])
    green = vispy.color.Colormap([[0.0, 0.0, 0.0], [0.0, 1.0, 0.0]])
    blue = vispy.color.Colormap([[0.0, 0.0, 0.0], [0.0, 0.0, 1.0]])

    v = napari.Viewer()

    rlayer = v.add_image(rch, name='red channel')
    rlayer.blending = 'additive'
    rlayer.colormap = 'red', red
    glayer = v.add_image(gch, name='green channel')
    glayer.blending = 'additive'
    glayer.colormap = green  # this will appear as [unnamed colormap]
    blayer = v.add_image(bch, name='blue channel')
    blayer.blending = 'additive'
    blayer.colormap = {'blue': blue}

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_set_colormaps.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: set_colormaps.ipynb <set_colormaps.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: set_colormaps.py <set_colormaps.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: set_colormaps.zip <set_colormaps.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
